--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       <canvas id="canvas1"></canvas>
     </div>
 
+    <div id="content">
+      <input type="file" id="thefile" accept="audio/*" />
+      <canvas id="canvas"></canvas>
+      <audio id="audio" controls></audio>
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
