--- a/index.html
+++ b/index.html
@@ -5,18 +5,58 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>title</title>
+    <script type="module" src="/main.js"></script>
   </head>
   <body>
-    <div class="canvas">
-      <canvas id="canvas1"></canvas>
+    <!-- Buttons to switch pages -->
+    <button class="pageswitch" onclick="gotoPage(1)">Page 1</button>
+    <button class="pageswitch" onclick="gotoPage(2)">Page 2</button>
+    <button class="pageswitch" onclick="gotoPage(3)">Page 3</button>
+    <button class="pageswitch" onclick="gotoPage(4)">Page 4</button>
+
+    <!-- Page 1 -->
+    <div id="page1" class="page on">
+      <p>
+        <a id="btStartAudioVisualization" class="bt"
+          >Start Audio Visualization</a
+        >
+        <div id="canvasContainer"></div>
+
+      </p>
     </div>
 
-    <div id="content">
-      <input type="file" id="thefile" accept="audio/*" />
-      <canvas id="canvas"></canvas>
-      <audio id="audio" controls></audio>
+    <!-- Page 2 -->
+    <div id="page2" class="page">
+      <h1>Page 2</h1>
+      <p>white</p>
     </div>
 
-    <script type="module" src="/main.js"></script>
+    <!-- Page 3 -->
+    <div id="page3" class="page">
+      <h1>Page 3</h1>
+      <p>This is the content of Page 3.</p>
+    </div>
+
+    <!-- Page 4 -->
+    <div id="page4" class="page">
+      <h1>Page 4</h1>
+      <p>This is the content of Page 4.</p>
+    </div>
+
+    <script>
+      function gotoPage(pageNumber) {
+        // Hide all pages
+        var pages = document.querySelectorAll('.page');
+        pages.forEach(function (page) {
+          page.classList.remove('on');
+        });
+
+        // Show the selected page
+        var selectedPage = document.getElementById('page' + pageNumber);
+        if (selectedPage) {
+          selectedPage.classList.add('on');
+        }
+      }
+    </script>
   </body>
 </html>
