--- a/page3.html
+++ b/page3.html
@@ -5,14 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>title</title>
-    <script defer type="module" src="/main.js"></script>
+    <script defer type="module" src="/main3.js"></script>
   </head>
   <body>
     <!-- Buttons to switch pages -->
-    <button class="pageswitch" onclick="gotoPage(1)">Page 1</button>
-    <button class="pageswitch" onclick="gotoPage(2)">Page 2</button>
-    <button class="pageswitch" onclick="gotoPage(3)">Page 3</button>
-    <button class="pageswitch" onclick="gotoPage(4)">Page 4</button>
+    <a class="pageswitch" href="page1.html">Page 1</a>
+    <a class="pageswitch" href="page2.html">Page 2</a>
+    <a class="pageswitch" href="page3.html">Page 3</a>
+    <a class="pageswitch" href="page4.html">Page 4</a>
     
     <!-- Page 1 -->
     <div id="page1" class="page on">
