--- a/page3.html
+++ b/page3.html
@@ -7,40 +7,16 @@
     <title>title</title>
     <script defer type="module" src="/main3.js"></script>
   </head>
-  <body>
-    <!-- Buttons to switch pages -->
+  <div class="grid">
     <a class="pageswitch" href="page1.html">Page 1</a>
     <a class="pageswitch" href="page2.html">Page 2</a>
     <a class="pageswitch" href="page3.html">Page 3</a>
     <a class="pageswitch" href="page4.html">Page 4</a>
+  </div>
+  <body>
+   
+    </body>
+    </html>
     
-    <!-- Page 1 -->
-    <div id="page1" class="page on">
-      <p>
-        <a id="btStartAudioVisualization" class="bt"
-          >Start Audio Visualization</a
-        >
-        <div id="canvasContainer"></div>
-
-      </p>
-    </div>
-
-    <!-- Page 2 -->
-    <div id="page2" class="page">
-      <h1>Page 2</h1>
-      <p>white</p>
-    </div>
-
-    <!-- Page 3 -->
-    <div id="page3" class="page">
-      <h1>Page 3</h1>
-      <p>This is the content of Page 3.</p>
-    </div>
-
-    <!-- Page 4 -->
-    <div id="page4" class="page">
-      <h1>Page 4</h1>
-      <p>This is the content of Page 4.</p>
-    </div>
   </body>
 </html>
