--- a/page2.html
+++ b/page2.html
@@ -7,14 +7,13 @@
     <title>title</title>
     <script defer type="module" src="/main2.js"></script>
   </head>
-  <body>
-    <!-- Buttons to switch pages -->
+  <div class="grid">
     <a class="pageswitch" href="page1.html">Page 1</a>
     <a class="pageswitch" href="page2.html">Page 2</a>
     <a class="pageswitch" href="page3.html">Page 3</a>
     <a class="pageswitch" href="page4.html">Page 4</a>
-
-    <!-- Page 1 -->
-    <div id="page1" class="page on"></div>
+  </div>
+  <body>
+    <canvas id="visualizer"></canvas>
   </body>
 </html>
