--- a/page4.html
+++ b/page4.html
@@ -8,12 +8,12 @@
     <script defer type="module" src="/main4.js"></script>
   </head>
   <body>
-    <!-- Buttons to switch pages -->
-    <a class="pageswitch" href="page1.html">Page 1</a>
-    <a class="pageswitch" href="page2.html">Page 2</a>
-    <a class="pageswitch" href="page3.html">Page 3</a>
-    <a class="pageswitch" href="page4.html">Page 4</a>
-    
+    <div class="grid">
+      <a class="pageswitch" href="page1.html">Page 1</a>
+      <a class="pageswitch" href="page2.html">Page 2</a>
+      <a class="pageswitch" href="page3.html">Page 3</a>
+      <a class="pageswitch" href="page4.html">Page 4</a>
+    </div>
     <!-- Page 1 -->
     <div id="page1" class="page on">
       <p>
