--- a/page1.html
+++ b/page1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>title</title>
     <script defer type="module" src="/main.js"></script>
+    <script defer type="module" src="/ws.js"></script>
+    
   </head>
   <body>
     <!-- Buttons to switch pages -->
