--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>title</title>
     <script defer type="module" src="/main2.js"></script>
+    <script defer type="module" src="/ws.js"></script>
   </head>
   <div class="grid">
     <a class="pageswitch" href="page1.html">Page 1</a>
