--- a/page3.html
+++ b/page3.html
@@ -7,17 +7,14 @@
     <title>title</title>
     <script defer type="module" src="/main3.js"></script>
     <script defer type="module" src="/ws.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   </head>
   <div class="grid">
-    <a class="pageswitch" href="page1.html">Page 1</a>
-    <a class="pageswitch" href="page2.html">Page 2</a>
-    <a class="pageswitch" href="page3.html">Page 3</a>
-    <a class="pageswitch" href="page4.html">Page 4</a>
+    
   </div>
   <body>
-   
+    <canvas class="achter"></canvas>
+<div class="call-to-action">Click to play!</div>
     </body>
     </html>
-    
-  </body>
 </html>
