--- a/page4.html
+++ b/page4.html
@@ -15,33 +15,8 @@
       <a class="pageswitch" href="page3.html">Page 3</a>
       <a class="pageswitch" href="page4.html">Page 4</a>
     </div>
-    <!-- Page 1 -->
-    <div id="page1" class="page on">
-      <p>
-        <a id="btStartAudioVisualization" class="bt"
-          >Start Audio Visualization</a
-        >
-        <div id="canvasContainer"></div>
+  
+    <a id="btStartAudioVisualization" class="bt">Start Audio Visualization</a>
 
-      </p>
-    </div>
-
-    <!-- Page 2 -->
-    <div id="page2" class="page">
-      <h1>Page 2</h1>
-      <p>white</p>
-    </div>
-
-    <!-- Page 3 -->
-    <div id="page3" class="page">
-      <h1>Page 3</h1>
-      <p>This is the content of Page 3.</p>
-    </div>
-
-    <!-- Page 4 -->
-    <div id="page4" class="page">
-      <h1>Page 4</h1>
-      <p>This is the content of Page 4.</p>
-    </div>
   </body>
 </html>
