--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>Welcome to</h1>
+
     <p>
       Turning songs into visual representation so that people with bad hearing
       also can enjoy music.
@@ -17,6 +18,32 @@
       Move the joystick to unlock the 4 different songs with their unique
       visual.
     </p>
-    <h4>Let's play</h4>
+
+    <h4></h4>
+
+    <div class="sound-icon disabled">
+      <div class="sound-wave">
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+        <i class="bar"></i>
+      </div>
+    </div>
   </body>
 </html>
