--- a/page4.html
+++ b/page4.html
@@ -9,6 +9,6 @@
     <script defer type="module" src="/ws.js"></script>
   </head>
   <body>
-    <a id="btStartAudioVisualization" class="bt">Start Audio Visualization</a>
+    <a id="btStartAudioVisualization" class="bt"></a>
   </body>
 </html>
