Astrid muziek in mp3 formaat toegevoegd

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script defer type="module" src="/mainhome.js"></script>
     <script defer type="module" src="/ws.js"></script>
   </head>
-  <body>
-    <h1>Welcome to</h1>
 
-    <p>
+  <body>
+    <h1 id="overoverlayText">Welcome to</h1>
+    <p id="overlayText">
       Turning songs into visual representation so that people with bad hearing
       also can enjoy music.
       <br />
@@ -19,31 +19,6 @@
       visual.
     </p>
 
-    <h4></h4>
-
-    <div class="sound-icon disabled">
-      <div class="sound-wave">
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-        <i class="bar"></i>
-      </div>
-    </div>
+    <canvas id="Canvas"></canvas>
   </body>
 </html>
