visuele colors & homescreen

--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
   </head>
 
   <body>
-    <h1 id="overoverlayText">Welcome to</h1>
-    <p id="overlayText">
-      Turning songs into visual representation so that people with bad hearing
-      also can enjoy music.
-      <br />
-      Move the joystick to unlock the 4 different songs with their unique
-      visual.
-    </p>
-
     <canvas id="Canvas"></canvas>
+    <h1 id="overoverlayText">
+      Welcome to <br />
+      Synesthopia
+    </h1>
+    <p id="overlayText">
+      Turning songs into visual representation so that people
+      <br />
+      with bad hearing also can enjoy music.
+      <br />
+      <br />
+      Move the joystick to unlock the 4 different songs
+      <br />
+      with their unique visual.
+    </p>
   </body>
 </html>
