--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <canvas id="Canvas"></canvas>
-    <h1 id="overoverlayText">
+    <h1 class="gradient-text" id="overoverlayText">
       Welcome to <br />
       Synesthopia
     </h1>
