--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <h1 id="overoverlayText">Welcome to</h1>
+    <h1 id="overoverlayText">Synesthopia</h1>
     <p id="overlayText">
       Turning songs into visual representation so that people with bad hearing
       also can enjoy music.
